force-app/main/default/objects/Redemption__c/Redemption__c.object-meta.xml
<CustomObject>
    <label>Redemption</label>
    <nameField>
        <displayFormat>RD-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redemptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>