force-app/main/default/objects/Redemption__c/fields/Coupon_Code__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Code__c</fullName>
    <label>Coupon Code</label>
    <referenceTo>Coupon_Code__c</referenceTo>
    <relationshipLabel>Redemptions</relationshipLabel>
    <relationshipName>Redemptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>