force-app/main/default/objects/Redemption__c/fields/Redeemed_On__c.field-meta.xml
<CustomField>
    <fullName>Redeemed_On__c</fullName>
    <label>Redeemed On</label>
    <type>DateTime</type>
</CustomField>