force-app/main/default/objects/Redemption__c/fields/Value_Redeemed__c.field-meta.xml
<CustomField>
    <fullName>Value_Redeemed__c</fullName>
    <label>Value Redeemed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>